Expose `diff_entity` to Rest API
