# apps/hash-api/src/graph/knowledge/primitive/entity.ts
@@ -3,6 +3,7 @@ import { typedEntries, typedKeys } from "@local/advanced-types/typed-entries";
 import { isUserHashInstanceAdmin } from "@local/hash-backend-utils/hash-instance";
 import type {
   AllFilter,
+  DiffEntityResult,
   EntityMetadata,
   EntityPermission,
   EntityStructuralQuery,
@@ -38,6 +39,7 @@ import type {
   EntityUuid,
   OwnedById,
   Subgraph,
+  Timestamp,
 } from "@local/hash-subgraph";
 import {
   extractDraftIdFromEntityId,
@@ -1064,3 +1066,16 @@ export const getEntityAuthorizationRelationships: ImpureGraphFunction<
           }) as EntityAuthorizationRelationship,
       ),
     );
+
+export const calculateEntityDiff: ImpureGraphFunction<
+  {
+    firstEntityId: EntityId;
+    firstTransactionTime: Timestamp | null;
+    firstDecisionTime: Timestamp | null;
+    secondEntityId: EntityId;
+    secondDecisionTime: Timestamp | null;
+    secondTransactionTime: Timestamp | null;
+  },
+  Promise<DiffEntityResult>
+> = async ({ graphApi }, { actorId }, params) =>
+  graphApi.diffEntity(actorId, params).then(({ data }) => data);
